--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -66,7 +66,12 @@ html
 			div.bottom-legal
 				a(href='?pc=true')= L('AS_PC')
 				br
-				a.bottom-contact(href='http://blog.jjo.kr/', target='_blank')= L('CREATOR')
-				a.bottom-contact(href='mailto:admin@mahankkutu.kro.kr', target='_blank') 문의 메일 바로가기
-			div.bottom-legal!= L('GPL')
+				a.bottom-contact(href='http://blog.mahankkutu.kro.kr/', target='_blank')= L('CREATOR')
+				a.bottom-contact(href='mailto:admin@mahankkutu.kro.kr', target='_blank') 문의 메일
+				a.bottom-contact(href='http://ca.mahankkutu.kro.kr', target='_blank') 카톡 문의
+				a.bottom-contact(href='http://sua.mahankkutu.kro.kr', target='_blank') 서비스이용약관
+				a.bottom-contact(href='http://ga.mahankkutu.kro.kr', target='_blank') 개인정보처리방침
+				a.bottom-contact(href='http://dis.mahankkutu.kro.kr', target='_blank') 디스코드
+				a.bottom-contact(href='http://dal.mahankkutu.kro.kr/', target='_blank') 달달소 커뮤니티
+				div.bottom-legal!= L('GPL')
 			+separator(40)
