--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -72,7 +72,7 @@ html
 				a.bottom-contact(href='http://sua.mahankkutu.kro.kr', target='_blank') 서비스이용약관
 				a.bottom-contact(href='http://ga.mahankkutu.kro.kr', target='_blank') 개인정보처리방침
 				a.bottom-contact(href='http://dis.mahankkutu.kro.kr', target='_blank') 디스코드
-				a.bottom-contact(href='http://dalco.mahankkutu.kro.kr/', target='_blank') 마한끄투 달달소 커뮤니티
-				a.bottom-contact(href='http://dal.mahankkutu.kro.kr/', target='_blank') 마한끄투 달달소 위성
+				a.bottom-contact(href='http://dalco.mahankkutu.kro.kr/', target='_blank') 달달소 커뮤니티
+				a.bottom-contact(href='http://dal.mahankkutu.kro.kr/', target='_blank') 달달소 위성
 				div.bottom-legal!= L('GPL')
 			+separator(40)
